--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -241,7 +241,7 @@ The only purpose is to prove that the export and import of the database has been
 <ul>
 <li>Go back to the portal to the target environment and click the <strong>Deploy</strong> button under the Repository</li>
 </ul>
-<p><img src="./images/db-deploy.png" alt=""> </p>
+<p><img src="images/db-deploy-button.png" alt="deployment"> </p>
 <ul>
 <li>After the deployment is done, you can check the change of the database as follows:<ul>
 <li>Click Go to Application to open a T24 Browser</li>
