--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -123,8 +123,8 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 <li><p>After creating and editing the <strong>.endpoint</strong> file, commit the file to the GitLab repository of your Dev Environment. <em>(In this example we have used TortoiseGit to commit and push the endpoint file - Command: Git Commit -&gt;&quot;master&quot;)</em></p>
 </li>
 <li>Go to your environment to the portal and click the <strong>deploy</strong> button under the Repository.   </li>
-<li>Wait until the <strong>.endpoint</strong> file is deployed in your Dev Environment and check the Endpoints section of the T24 application where Your_Endpoint_Description Endpoint is displayed as bellow:
-<img src="images/app_endp3.png" alt="portal endpoint display"></li>
+<li>Wait until the <strong>.endpoint</strong> file is deployed in your Dev Environment and check the Endpoints section of the T24 application where Your_Endpoint_Description Endpoint is displayed as bellow:</li>
+<li><img src="images/app-endpoint-clickable.png" alt="portal endpoint display"></li>
 </ul>
 <h1 id="add-multiple-endpoints-from-a-single-file">Add multiple endpoints from a single file</h1>
 <ul>
@@ -132,14 +132,14 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 <img src="images/app-endpoint-multiple.png" alt="multiple endpoints same file"></li>
 <li>After the file is deployed, all 3 endpoints from the example are displayed in the Endpoints section of the T24 application.</li>
 <li>Also note that the endpoints are displayed/ grouped by their type: clickable, copyable and downloadable.
-<img src="images/app-endpoints-deployed.png" alt="multiple endpoints same file"></li>
+<img src="images/app-endpoints-deployed-type.png" alt="multiple endpoints same file"></li>
 </ul>
 <h1 id="add-multiple-endpoints-from-multiple-files-at-the-same-time">Add multiple endpoints from multiple files at the same time</h1>
 <ul>
 <li>If you want to add endpoints for multiple plugins deployed in your Dev Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.
 <img src="images/app-endpoint-files.png" alt="multiple endpoints multiple files"></li>
 <li>After both files are deployed, the three endpoints for plugin1 and the two endpoints for plugin2 are displayed in the Endpoints section of the T24 application.
-<img src="images/app_endp8.png" alt="multiple endpoints multiples files display"></li>
+<img src="images/app-endpoints-multiple.png" alt="multiple endpoints multiples files display"></li>
 </ul>
 <h1 id="updateremove-endpoints">Update/Remove endpoints</h1>
 <ul>
