--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -128,8 +128,9 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 </ul>
 <h1 id="add-multiple-endpoints-from-a-single-file">Add multiple endpoints from a single file</h1>
 <ul>
-<li>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as bellow:
-<img src="images/app-endpoint-multiple.png" alt="multiple endpoints same file"></li>
+<li>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as below:
+<img src="images/app-endpoint-single.png" alt="multiple endpoints same file">
+<br></li>
 <li>After the file is deployed, all 3 endpoints from the example are displayed in the Endpoints section of the T24 application.</li>
 <li>Also note that the endpoints are displayed/ grouped by their type: clickable, copyable and downloadable.
 <img src="images/app-endpoints-deployed-type.png" alt="multiple endpoints same file"></li>
