--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -81,8 +81,8 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="create-new-application-endpoint">Create new application endpoint</h1>
 
-<p>This document can be used by technical staff who need to add new endpoints to the T24 application of a Dev Environment in case of deploying a plugin in the application server of the Dev Environment.</p>
-<div class="NOTE"><h5>Note</h5><p>This guide presumes that a Dev Environment is already created and available. <em>(In this example, we have created a Dev Environment named DEMO).</em></p>
+<p>This document can be used by technical staff who need to add new endpoints to the T24 application of a Environment in case of adding any custom endpoints or deploying a plugin in the application server of the Environment.</p>
+<div class="NOTE"><h5>Note</h5><p>This guide presumes that an Environment is already created and available. <em>(In this example, we have created a Environment named DEMO).</em></p>
 </div>
 <p><strong>Three</strong> properties are mandatory to create a new endpoint:</p>
 <table>
@@ -95,23 +95,23 @@
 <tbody>
 <tr>
 <td>Endpoint Description</td>
-<td>The Endpoint Description will be displayed in your Organisation Portal in the Endpoints section of the T24 application from your Dev Environment.</td>
+<td>The Endpoint Description will be displayed in your Organisation Portal in the Endpoints section of the T24 application from your Environment.</td>
 </tr>
 <tr>
 <td>Endpoint URL</td>
-<td>The Endpoint URL will be: <br> * <strong>opened</strong> in a new tab of your browser when the Endpoint Description is clicked, if the Endpoint type is clickable. <br> * <strong>copied</strong>, if the Endpoint type is copyable. <br> * automatically <strong>downloaded</strong>, if it is a downloadable type of endpoint.</td>
+<td>The Endpoint URL will be: <br> * <strong>opened</strong> in a new tab of your browser when the Endpoint Description is clicked, if the Endpoint type is clickable. <br> * <strong>copied</strong>, if the Endpoint type is copyable. <br>* <strong>downloaded</strong>, if the Endpoint type is a downloadable.</td>
 </tr>
 <tr>
 <td>Endpoint Type</td>
-<td>In order to apply above actions, a type must be defined for each endpoint, based on how you want to be used: clickable, copyable and downloadable.</td>
+<td>In order to apply above actions, a type must be defined for each endpoint, based on how you want to be used: clickable, copyable or downloadable.</td>
 </tr>
 </tbody>
 </table>
-<p>In order to create new endpoints for the T24 application of your Dev Environment, the next steps must be followed:</p>
+<p>In order to create new endpoints for the T24 application of your Environment, the next steps must be followed:</p>
 <ul>
-<li><p>Clone the GitLab repository of your Dev Environment in your local machine. For more details on how to clone a repository, check this <a href="use-gitlab-repository.html" target="_blank"><strong>page</strong></a>.</p>
+<li><p>Clone the GitLab repository of your Environment in your local machine. For more details on how to clone a repository, check this <a href="use-gitlab-repository.html" target="_blank"><strong>page</strong></a>.</p>
 </li>
-<li><p>Create a file with <strong>.endpoint</strong> extension inside <strong>plugins</strong> folder of the cloned repository as in the bellow picture. The name of the file is not important, but it should relate to the plugin for which endpoints are added.
+<li><p>Create a file with <strong>.endpoint</strong> extension inside <strong>plugins</strong> folder of the cloned repository as in the bellow picture. The name of the file is not important, but it should be relevant for your requirement.
 <img src="images/app_endp1.png" alt="create endpoint file"></p>
 </li>
 <li><p>Inside the <strong>.endpoint</strong> file, add a new line for each endpoint with the structure <strong>Your_Endpoint_Description~Your_Endpoint_URL~Your_Endpoint_Type</strong>, as per bellow picture:</p>
@@ -120,14 +120,15 @@
 Endpoint Description and URL are as per your choice. Type must be one of the options: <strong>clickable</strong>, <strong>copyable</strong> or <strong>downloadable</strong>.</p>
 </div>
 </li>
-<li><p>After creating and editing the <strong>.endpoint</strong> file, commit the file to the GitLab repository of your Dev Environment. <em>(In this example we have used TortoiseGit to commit and push the endpoint file - Command: Git Commit -&gt;&quot;master&quot;)</em></p>
+<li><p>After creating and editing the <strong>.endpoint</strong> file, commit the file to the GitLab repository of your Environment. <em>(In this example we have used TortoiseGit to commit and push the endpoint file - Command: Git Commit -&gt;&quot;master&quot;)</em></p>
 </li>
 <li>Go to your environment to the portal and click the <strong>deploy</strong> button under the Repository.   </li>
-<li>Wait until the <strong>.endpoint</strong> file is deployed in your Dev Environment and check the Endpoints section of the T24 application where Your_Endpoint_Description Endpoint is displayed as bellow:</li>
+<li>Wait until the <strong>.endpoint</strong> file is deployed in your Environment and check the Endpoints section of the T24 application as below:</li>
 <li><img src="images/app-endpoint-clickable.png" alt="portal endpoint display"></li>
 </ul>
 <h1 id="add-multiple-endpoints-from-a-single-file">Add multiple endpoints from a single file</h1>
 <ul>
+<li></li>
 <li>If a plugin has more than one endpoint, create a .endpoint file and add a separate line for each endpoint item, as below:
 <img src="images/app-endpoint-single.png" alt="multiple endpoints same file">
 <br></li>
@@ -137,17 +138,17 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 </ul>
 <h1 id="add-multiple-endpoints-from-multiple-files-at-the-same-time">Add multiple endpoints from multiple files at the same time</h1>
 <ul>
-<li>If you want to add endpoints for multiple plugins deployed in your Dev Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.
+<li>If you want to add endpoints for multiple plugins deployed in your Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.
 <img src="images/app-endpoint-files.png" alt="multiple endpoints multiple files"></li>
 <li>After both files are deployed, the three endpoints for plugin1 and the two endpoints for plugin2 are displayed in the Endpoints section of the T24 application.
 <img src="images/app-endpoints-multiple.png" alt="multiple endpoints multiples files display"></li>
 </ul>
 <h1 id="updateremove-endpoints">Update/Remove endpoints</h1>
 <ul>
-<li>If you want to update endpoints that were already added to an application, you just have to update the required endpoint line from the .endpoint file, commit the file to the GitLab repository of your Dev Environment and after the file is deployed, the required endpoint will be updated in the Endpoints section of your Application.</li>
-<li>If you want to remove endpoints that were already added to an application, you just have to remove the required endpoint line from the .endpoint file, commit the file to the GitLab repository of your Dev Environment and after the file is deployed, only the endpoints available in the .endpoint file will be displayed in the Endpoints section of your Application.</li>
+<li>If you want to update endpoints that were already added to an application, you just have to update the required endpoint line from the .endpoint file, commit the file to the GitLab repository of your Environment and after the file is deployed, the required endpoint will be updated in the Endpoints section of your Application.</li>
+<li>If you want to remove endpoints that were already added to an application, you just have to remove the required endpoint line from the .endpoint file, commit the file to the GitLab repository of your Environment and after the file is deployed, only the endpoints available in the .endpoint file will be displayed in the Endpoints section of your Application.</li>
 <li><p>Also, to remove all the endpoints from a .endpoint file do not remove/ delete the file, but remove all the endpoints lines inside the file (empty the file).</p>
-<div class="NOTE"><h5>Note</h5><p>To summarize, the list of plugin endpoints displayed in the Endpoints section for an application is updated based on the content of <strong>.endpoint</strong> files available in the <strong>plugins</strong> folder from the GitLab repository of your Dev Environment. If no .endpoint files are available in the GitLab repository of your Dev Environment, then no plugin endpoints will be displayed.</p>
+<div class="NOTE"><h5>Note</h5><p>To summarize, the list of plugin endpoints displayed in the Endpoints section for an application is updated based on the content of <strong>.endpoint</strong> files available in the <strong>plugins</strong> folder from the GitLab repository of your Environment. If no .endpoint files are available in the GitLab repository of your Environment, then no plugin endpoints will be displayed.</p>
 </div>
 </li>
 </ul>
