--- a/home/toc.html
+++ b/home/toc.html
@@ -103,6 +103,9 @@
                     <a href="techguides/environment-creation-in-paas.html" name="" title="Create environments and organisations">Create environments and organisations</a>
                   </li>
                   <li>
+                    <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
+                  </li>
+                  <li>
                     <a href="techguides/use-gitlab-repository.html" name="" title="Deploy features to environment">Deploy features to environment</a>
                   </li>
                   <li>
