--- a/home/techguides/access-ud-directories.html
+++ b/home/techguides/access-ud-directories.html
@@ -87,7 +87,7 @@
 </div>
 <h2 id="create-new-environment">Create New Environment</h2>
 <ul>
-<li>Login to the indicated Temenos Continuous Deployment Platform - either: <a href="https://portal.temenos.cloud/"><strong>https://portal.temenos.cloud/</strong></a> or <a href="https://tcd-portal.temenos.cloud/"><strong>https://tcd-portal.temenos.cloud/</strong></a>.</li>
+<li>Login to <a href="https://portal.temenos.cloud/"><strong>https://portal.temenos.cloud/</strong></a>.</li>
 <li>Each time you login, you must accept the Privacy Notice in order to have access to the portal.</li>
 <li>The first page that is displayed after login is the <strong>Environments</strong> page where you can fill the date to create a <strong>New environment</strong><ul>
 <li>Fill the mandatory fields:<ul>
